...
                                    <constraint firstAttribute="height" constant="162" id="cnr-Bc-D4L"/>
                                </constraints>
                                <string key="text">The adjustment survey is derived from the management of Levodopa-Associated Motor Complications algorithm from the Compendium of Therapeutic Choice 2018. The initial predominant problem assessment determines if the participant's predominant problem is "wearing off" or dyskinesia with gyroscope and accelerometer readings, then a questionaire is fol
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adjustment Survey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xkL-D4-dAd">
                                <rect key="frame" x="16" y="49" width="343" height="48"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etN-du-YNB">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avC-r6-qx8" customClass="shapedButton" customModule="AnchorApplication" customModuleProvider="target">
                                <rect key="frame" x="68" y="360" width="239" height="66"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="66" id="Tn2-Fk-jNM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Start Assessment">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="25"/>
                                    </userDefinedRuntimeAttribute>
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ig-4V-Eoa" customClass="LineChartView" customModule="Charts" colorLabel="IBBuiltInLabel-Red">
                                <rect key="frame" x="0.0" y="58" width="375" height="383"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTD-lo-Hdl" customClass="shapedButton" customModule="AnchorApplication" customModuleProvider="target">
                                <rect key="frame" x="297" y="607" width="37" height="37"/>
                                <state key="normal" image="save"/>
                                <connections>
                                    <action selector="saveGraph:" destination="XpN-ob-qJ4" eventType="touchUpInside" id="m3D-1c-r3b"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wm0-lw-XZn" customClass="shapedButton" customModule="AnchorApplication" customModuleProvider="target">
                                <rect key="frame" x="130" y="534" width="115" height="36"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Generate"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                        <color key="value" cocoaTouchSystemColor="darkTextColor"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="generateNewGraph:" destination="XpN-ob-qJ4" eventType="touchUpInside" id="QZw-Hv-zWf"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress Monitor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4b-RW-VWj">
                                <rect key="frame" x="90" y="20" width="195" height="30"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zxe-oD-63E" customClass="shapedButton" customModule="AnchorApplication" customModuleProvider="target">
...
