...
                    // Action: +1 to globalDyskinesia
                    if avgAcc > avgRot && avgDiff >= 0.01{
                        adjustmentSurveyQ1ViewController.globalDyskinesia = adjustmentSurveyQ1ViewController.globalDyskinesia + 1
                        self.processImage.isHidden = true
                        self.processInfo.isHidden = true
                        self.startButton.isHidden = true
                        let alert = UIAlertController(title: "Assessment Result", message: "Predominant problem is dyskinesia.", preferredStyle: .alert)
                        let toSurvey = UIAlertAction(title: "Continue to survey", style: .default, handler: { _ in
                            self.performSegue(withIdentifier: "toQ1", sender: nil)
                        })
                        alert.addAction(toSurvey)
                        self.present(alert, animated: true, completion: nil)
                    }
                        // Condition: absolute average difference between user acceleration and rotation rate is lower than 0.01
...
